fixed overlapping dialogue components

--- a/src/assets/styles/_modals.scss
+++ b/src/assets/styles/_modals.scss
@@ -35,13 +35,11 @@
 }
 
 .modal-body {
-  margin: 20px 0;
-  color: black;
+  color: $black;
 }
 
 .modal-footer {
-  margin: 20px 0;
-  color: black;
+  color: $black;
 }
 
 .modal-default-button {
